--- a/index-en.html
+++ b/index-en.html
@@ -24,7 +24,7 @@
 				<span class="navToggle-hamburger"></span>
 			</a>
 			<nav class="nav">
-				<!-- <a href="javascript:;" class="nav-item">En Version</a> -->
+				<a href="javascript:;" class="nav-item">中文</a>
 				<a href="#works" class="nav-item">Works</a>
 				<a href="#contact" class="nav-item">Contact</a>
 			</nav>
@@ -56,36 +56,49 @@
 						</li>
 						<li class="timeline-item">
 							<p class="font-medium font-weight400">Frontend Engineer<br /><span
-									class="font-gray500 font-weight300">(2019-2013) 進入Html CSS的世界，企業網站、網路活動、App切版</span>
+									class="font-gray500 font-weight300">(2019-2013) The job responsibilities have
+									shifted from creative work to CSS/JavaScript front-end engineering, including
+									corporate website front-end development, online campaign front-end development, and
+									app front-end development.</span>
 							</p>
 						</li>
 						<li class="timeline-item">
 							<p class="font-medium font-weight400">Experience Designer<br /><span
-									class="font-gray500 font-weight300">(2013-2008) 創意活動發想、提案、製作各式媒體素材製作resize</span>
+									class="font-gray500 font-weight300">(2013-2008) Creative event ideation, proposal,
+									and production, as well as creating various media materials and resizing
+									them.</span>
 							</p>
 						</li>
 					</ul>
 					<p class="font-medium font-weight700 mt-4">橙網科技</p>
 					<p class="font-medium font-weight400">Web Designer<br /><span
-							class="font-gray500 font-weight300">(2007-2008) 創意活動發想、提案、製作各式媒體素材製作resize</span></p>
-					<p class="font-medium font-weight700 mt-4">玉馬門創意設計</p>
+							class="font-gray500 font-weight300">(2007-2008) Creative event ideation, proposal, and
+							production, creating various media materials, and banner resizing.</span></p>
+					<p class="font-medium font-weight700 mt-4">Yuma-m Creative</p>
 					<p class="font-medium font-weight400">Web Designer<br /><span
-							class="font-gray500 font-weight300">(2004-2007) 企業網頁提案設計切版、平面輸出設計完稿支援</span></p>
+							class="font-gray500 font-weight300">(2004-2007) Proposal, design, and front-end development
+							of corporate website, as well as providing support for graphic design and output.</span></p>
 				</div>
 			</div>
 		</div>
 		<div class="works articleWidth">
-			<h2 id="works" class="h2 h2--dots h2--works font-xLarge font-weight400">作品案例</h2>
+			<h2 id="works" class="h2 h2--dots h2--works font-xLarge font-weight400">Works</h2>
 			<ul class="listWorks mt-6">
 				<li class="listWorks-item">
 					<p><span class="font-cyan500 font-weight500">EvaAir</span><a
 							href="https://www.evaair.com/zh-tw/index.html" target="_bl
 						" class="link--linkOut">View
 							Website</a></p>
-					<h3 class="h3 font-large font-weight700 mt-1">長榮航空</h3>
+					<h3 class="h3 font-large font-weight700 mt-1">EvaAir</h3>
 					<p class="font-medium font-weight300 mt-1">
-						參前期使用者研究、規劃提案到UI設計的全方位改版專案，設計方向在半重塑品牌形象結合長榮航空的品牌理念，在版面設計上多圓弧與圓角暗示品牌文化中的服務與圓融，用色上也一改過去企業較深較沈穩的配色，打破之前太過穩重老派的品牌風格，並同時須符合WCAG規範，採用更現代化、活潑、有活力的風格來呈現，進一步傳達給使用者對長榮新的感受...<a
-							href="works1.html" class="link--works font-weight500">更多內容</a>
+						Involved in a comprehensive redesign project, from initial user research and proposal planning
+						to UI design. The design direction aimed to partially reshape the brand image while
+						incorporating EVA Air's brand philosophy. The layout design used many curves and rounded corners
+						to suggest the brand culture of service and harmony. The color scheme departed from the previous
+						deep and stable corporate palette, breaking away from the previous overly conservative and
+						old-fashioned brand style while adhering to WCAG guidelines. A more modern, lively, and
+						energetic style was used to convey a new feeling to users....<a href="works1.html"
+							class="link--works font-weight500">More</a>
 					</p>
 					<a href="works1.html">
 						<img src="images/img-work1.jpg" class="img mt-4" />
@@ -96,10 +109,14 @@
 							target="_bl
 						" class="link--linkOut">View
 							Website</a></p>
-					<h3 class="h3 font-large font-weight700 mt-1">復華投信</h3>
-					<p class="font-medium font-weight300 mt-1">
-						重新設計官網架構，從舊有的架構中淘汰掉複雜、冗餘的內容，使得網站整體更加簡潔明瞭。新的UI設計，提升視覺效果，讓龐雜的金融資訊更加好閱讀。同時，也更加注重產品的介紹和說明，提供友善的產品資訊和投資試算UI，幫助客戶更容易理解復華投信的複雜產品和服務...<a
-							href="works2.html" class="link--works font-weight500">更多內容</a>
+					<h3 class="h3 font-large font-weight700 mt-1">Fhtrust</h3>
+					<p class="font-medium font-weight300 mt-1">Redesign the official website architecture, eliminating
+						complex and redundant content from the existing structure to make the overall site more concise
+						and clear. The new UI design improves visual effects and makes complex financial information
+						more readable. At the same time, there is more emphasis on product introduction and explanation,
+						providing user-friendly product information and investment calculator UI to help customers
+						better understand Fu Hwa Securities' complex products and services...<a href="works2.html"
+							class="link--works font-weight500">More</a>
 					</p>
 					<a href="works2.html">
 						<img src="images/img-work2.jpg" class="img mt-4" />
@@ -110,21 +127,26 @@
 							href="https://www.esunsec.com.tw/" target="_bl
 						" class="link--linkOut">View
 							Website</a></p>
-					<h3 class="h3 font-large font-weight700 mt-1">玉山證券 大小網</h3>
-					<p class="font-medium font-weight300 mt-1">
-						在專案角色為前端切版，將設計師提供的設計轉化為可操作的HTML和CSS代碼，同時注重網站的可用性和使用者體驗，以便讓使用者可以輕鬆地使用和瀏覽網站...<a
-							href="works3.html" class="link--works font-weight500">更多內容</a>
+					<h3 class="h3 font-large font-weight700 mt-1">E.SUN Securities</h3>
+					<p class="font-medium font-weight300 mt-1">As a frontend developer in the project, the task is to
+						transform the designs provided by the designer into functional HTML and CSS code, while also
+						focusing on website usability and user experience, to ensure that users can easily use and
+						navigate the website....<a href="works3.html" class="link--works font-weight500">More</a>
 					</p>
 					<a href="works3.html">
 						<img src="images/img-work3.jpg" class="img mt-4" />
 					</a>
 				</li>
 				<li class="listWorks-item">
-					<h3 class="h3 font-large font-weight700 mt-1">UDN Shopping IPad版</h3>
+					<h3 class="h3 font-large font-weight700 mt-1">UDN Shopping IPad Version</h3>
 					<p class="font-medium font-weight300 mt-1">
-						客戶breif要為年長者製作符合使用體驗需求的Ipad版本(隨著RWD技術的演進，雖然此版本已不在現在)，製作過程中因專案時程必須快速開發，整個團隊採用paper
-						prototype讓規劃、設計以及前端快速有共識並隨時Update與調整，是很有趣的過程，在品牌視覺設計上雖然只有製作Ipad版本，客戶很滿意進而後續客戶內部設計團隊沿用修改當時Web版...<a
-							href="works3.html" class="link--works font-weight500">更多內容</a>
+						The client brief was to create an iPad version for elderly users that meets their usability
+						needs (although this version is offline now). Due to the need for rapid development in the
+						project timeline, the entire team used paper prototypes to quickly establish consensus among
+						planning, design, and front-end teams, and update and adjust as needed. It was an interesting
+						process, and although only an iPad version was created in terms of brand visual design, the
+						client was very satisfied and subsequently their internal design team used and modified it for
+						the web version....<a href="works3.html" class="link--works font-weight500">更多內容</a>
 					</p>
 					<a href="works4.html">
 						<img src="images/img-work4.jpg" class="img mt-4" />
@@ -132,14 +154,14 @@
 				</li>
 			</ul>
 		</div>
-		<h4 id="works" class="w100 alignCenter font-medium font-weight500 mb-4">行銷類作品</h4>
+		<h4 id="works" class="w100 alignCenter font-medium font-weight500 mb-4">Marketing Works</h4>
 		<ul class="listMoreWork contentWidth">
 			<li class="listMoreWork-item">
 				<p class="fontRobo font-medium font-weight400">Dantsu / Dan is Moving</p>
 				<img src="images/img-moreWorks1.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-medium font-weight400">Logitech / UE潮玩360</p>
+				<p class="font-medium font-weight400">Logitech / UE Boom</p>
 				<img src="images/img-moreWorks2.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
@@ -147,7 +169,7 @@
 				<img src="images/img-moreWorks3.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-medium font-weight400">Adidas Women / 自信魔鏡</p>
+				<p class="font-medium font-weight400">Adidas Women / Confidence Mirror</p>
 				<img src="images/img-moreWorks4.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
@@ -155,23 +177,23 @@
 				<img src="images/img-moreWorks5.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-medium font-weight400">富達 / 投資金頭腦</p>
+				<p class="font-medium font-weight400">Fidelity / 投資金頭腦</p>
 				<img src="images/img-moreWorks6.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-medium font-weight400">黑貓宅急便 / 黑貓鳥行李</p>
+				<p class="font-medium font-weight400">President Transnet Corporation / 黑貓鳥行李</p>
 				<img src="images/img-moreWorks7.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-mediu font-weight400">黑貓宅急便 / X’mas交換禮物派對</p>
+				<p class="font-mediu font-weight400">President Transnet Corporation / X’mas Gift Exchange Party</p>
 				<img src="images/img-moreWorks8.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-mediu font-weight400">7-11 / 歡樂雲端超商</p>
+				<p class="font-mediu font-weight400">7-11 / Cloud Convenience Store</p>
 				<img src="images/img-moreWorks9.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-mediu font-weight400">7-11 / 萬聖節搗蛋鬼派對</p>
+				<p class="font-mediu font-weight400">7-11 / Open Halloween party</p>
 				<img src="images/img-moreWorks10.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
@@ -183,19 +205,19 @@
 				<img src="images/img-moreWorks12.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-mediu font-weight400">Toyota / 驅動城市APP</p>
+				<p class="font-mediu font-weight400">Toyota / Drive City APP</p>
 				<img src="images/img-moreWorks13.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-mediu font-weight400">Hennessy / 音樂基因</p>
+				<p class="font-mediu font-weight400">Hennessy / Misic Genes</p>
 				<img src="images/img-moreWorks14.jpg" alt="" class="img mt-2">
 			</li>
 			<li class="listMoreWork-item">
-				<p class="font-mediu font-weight400">Gamania 全球官網(已下線)</p>
+				<p class="font-mediu font-weight400">Gamania Official Website(Offline)</p>
 				<img src="images/img-moreWorks15.jpg" alt="" class="img mt-2">
 			</li>
 		</ul>
-		<h2 class="h2 h2--dots font-xLarge font-weight400 mt-2">聯絡我</h2>
+		<h2 class="h2 h2--dots font-xLarge font-weight400 mt-2">Contact</h2>
 		<ul id="contact" class="contact mt-4">
 			<li class="contact-item">Tel : 0912-212-773</li>
 			<li class="contact-item">Mail : pecylin@gmail.com</li>
