--- a/works1.html
+++ b/works1.html
@@ -22,7 +22,7 @@
 			<h1 class="sr-only">07's Profile</h1>
 			<a href="index.html" class="link--home font-white"><span>回首頁</span></a>
 			<div class="alignCenter pt-16 pb-16">
-				<h2 class="h2--page w100 font-xxLarge font-white font-weight500">長榮航空 Evaair 官網改版</h2>
+				<h2 class="h2--page w100 font-xxLarge font-white font-weight500">Evaair Global Official Website</h2>
 				<a href="https://www.evaair.com/zh-tw/index.html" target="_blank"
 					class="link--pageLinkOut link--pageLinkOutEva mt-4">View
 					Website</a>
@@ -30,7 +30,8 @@
 		</header>
 		<main class="main main-page articleWidth">
 			<article class="article font-medium">
-				<h3 class="font-large font-weight500">參與使用者研究開始，了解不同族群的應用情境的顧客體驗</h3>
+				<h3 class="font-large font-weight500">Participate in user research to understand the customer experience
+					of different situation in various usage scenarios</h3>
 				<p class="mt-2">
 					由於客戶顧客涵蓋了忠誠商業會員到一般休閒旅遊客，因此需要進行更加細緻化和全面性的使用者研究。專案進程中採取三階段(前/中/後)的使用者研究，進一步了解不同類型顧客的需求和習慣。</p>
 				<p class="mt-4"><span class="font-weight500">前期提案階段</span> -
