--- a/index-en.html
+++ b/index-en.html
@@ -24,7 +24,7 @@
 				<span class="navToggle-hamburger"></span>
 			</a>
 			<nav class="nav">
-				<a href="javascript:;" class="nav-item">中文</a>
+				<a href="index.html" class="nav-item">中文</a>
 				<a href="#works" class="nav-item">Works</a>
 				<a href="#contact" class="nav-item">Contact</a>
 			</nav>
