--- a/index-en.html
+++ b/index-en.html
@@ -85,11 +85,11 @@
 			<h2 id="works" class="h2 h2--dots h2--works font-xLarge font-weight400">Works</h2>
 			<ul class="listWorks mt-6">
 				<li class="listWorks-item">
-					<p><span class="font-cyan500 font-weight500">EvaAir</span><a
-							href="https://www.evaair.com/zh-tw/index.html" target="_bl
-						" class="link--linkOut">View
-							Website</a></p>
-					<h3 class="h3 font-large font-weight700 mt-1">EvaAir</h3>
+					<div class="projectTitle">
+						<h3 class="h3 font-large font-weight700 mt-1">EvaAir</h3>
+						<a href="https://www.evaair.com/zh-tw/index.html" target="_blank" class="link--linkOut">View
+							Website</a>
+					</div>
 					<p class="font-medium font-weight300 mt-1">
 						Involved in a comprehensive redesign project, from initial user research and proposal planning
 						to UI design. The design direction aimed to partially reshape the brand image while
@@ -100,16 +100,15 @@
 						energetic style was used to convey a new feeling to users....<a href="works1.html"
 							class="link--works font-weight500">More</a>
 					</p>
-					<a href="works1.html">
+					<a href="works1-en.html">
 						<img src="images/img-work1.jpg" class="img mt-4" />
 					</a>
 				</li>
 				<li class="listWorks-item">
-					<p><span class="font-cyan500 font-weight500">Fhtrust</span><a href="https://www.fhtrust.com.tw/"
-							target="_bl
-						" class="link--linkOut">View
-							Website</a></p>
-					<h3 class="h3 font-large font-weight700 mt-1">Fhtrust</h3>
+					<div class="projectTitle">
+						<h3 class="h3 font-large font-weight700 mt-1">Fhtrust</h3>
+						<a href="https://www.fhtrust.com.tw/" target="_blank" class="link--linkOut">View Website</a>
+					</div>
 					<p class="font-medium font-weight300 mt-1">Redesign the official website architecture, eliminating
 						complex and redundant content from the existing structure to make the overall site more concise
 						and clear. The new UI design improves visual effects and makes complex financial information
@@ -123,11 +122,10 @@
 					</a>
 				</li>
 				<li class="listWorks-item">
-					<p><span class="font-cyan500 font-weight500">E.SUN Securities</span><a
-							href="https://www.esunsec.com.tw/" target="_bl
-						" class="link--linkOut">View
-							Website</a></p>
-					<h3 class="h3 font-large font-weight700 mt-1">E.SUN Securities</h3>
+					<div class="projectTitle">
+						<h3 class="h3 font-large font-weight700 mt-1">E.SUN Securities</h3>
+						<a href="https://www.esunsec.com.tw/" target="_blank" class="link--linkOut">View Website</a>
+					</div>
 					<p class="font-medium font-weight300 mt-1">As a frontend developer in the project, the task is to
 						transform the designs provided by the designer into functional HTML and CSS code, while also
 						focusing on website usability and user experience, to ensure that users can easily use and
