--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<span class="navToggle-hamburger"></span>
 			</a>
 			<nav class="nav">
-				<a href="javascript:;" class="nav-item">En</a>
+				<a href="index-en.html" class="nav-item">En</a>
 				<a href="#works" class="nav-item">作品案例</a>
 				<a href="#contact" class="nav-item">聯絡我</a>
 			</nav>
@@ -60,10 +60,10 @@
 							</p>
 						</li>
 					</ul>
-					<p class="font-medium font-weight700 mt-4">橙網科技</p>
+					<p class="font-medium font-weight700 mt-8">橙網科技</p>
 					<p class="font-medium font-weight400">Web Designer<br /><span
 							class="font-gray500 font-weight300">(2007-2008) 創意活動發想、提案、製作各式媒體素材製作resize</span></p>
-					<p class="font-medium font-weight700 mt-4">玉馬門創意設計</p>
+					<p class="font-medium font-weight700 mt-8">玉馬門創意設計</p>
 					<p class="font-medium font-weight400">Web Designer<br /><span
 							class="font-gray500 font-weight300">(2004-2007) 企業網頁提案設計切版、平面輸出設計完稿支援</span></p>
 				</div>
@@ -73,11 +73,10 @@
 			<h2 id="works" class="h2 h2--dots h2--works font-xLarge font-weight400">作品案例</h2>
 			<ul class="listWorks mt-6">
 				<li class="listWorks-item">
-					<p><span class="font-cyan500 font-weight500">EvaAir</span><a
-							href="https://www.evaair.com/zh-tw/index.html" target="_bl
-						" class="link--linkOut">View
-							Website</a></p>
-					<h3 class="h3 font-large font-weight700 mt-1">長榮航空</h3>
+					<div class="projectTitle">
+						<h3 class="h3 font-large font-weight700 mt-1">長榮航空</h3>
+						<a href="https://www.evaair.com/zh-tw/index.html" target="_blank" class="link--linkOut">前往官網</a>
+					</div>
 					<p class="font-medium font-weight300 mt-1">
 						參前期使用者研究、規劃提案到UI設計的全方位改版專案，設計方向在半重塑品牌形象結合長榮航空的品牌理念，在版面設計上多圓弧與圓角暗示品牌文化中的服務與圓融，用色上也一改過去企業較深較沈穩的配色，打破之前太過穩重老派的品牌風格，並同時須符合WCAG規範，採用更現代化、活潑、有活力的風格來呈現，進一步傳達給使用者對長榮新的感受...<a
 							href="works1.html" class="link--works font-weight500">更多內容</a>
@@ -87,11 +86,10 @@
 					</a>
 				</li>
 				<li class="listWorks-item">
-					<p><span class="font-cyan500 font-weight500">Fhtrust</span><a href="https://www.fhtrust.com.tw/"
-							target="_bl
-						" class="link--linkOut">View
-							Website</a></p>
-					<h3 class="h3 font-large font-weight700 mt-1">復華投信</h3>
+					<div class="projectTitle">
+						<h3 class="h3 font-large font-weight700 mt-1">復華投信</h3>
+						<a href="https://www.fhtrust.com.tw/" target="_blank" class="link--linkOut">前往官網</a>
+					</div>
 					<p class="font-medium font-weight300 mt-1">
 						重新設計官網架構，從舊有的架構中淘汰掉複雜、冗餘的內容，使得網站整體更加簡潔明瞭。新的UI設計，提升視覺效果，讓龐雜的金融資訊更加好閱讀。同時，也更加注重產品的介紹和說明，提供友善的產品資訊和投資試算UI，幫助客戶更容易理解復華投信的複雜產品和服務...<a
 							href="works2.html" class="link--works font-weight500">更多內容</a>
@@ -101,11 +99,11 @@
 					</a>
 				</li>
 				<li class="listWorks-item">
-					<p><span class="font-cyan500 font-weight500">E.SUN Securities</span><a
-							href="https://www.esunsec.com.tw/" target="_bl
-						" class="link--linkOut">View
-							Website</a></p>
-					<h3 class="h3 font-large font-weight700 mt-1">玉山證券 大小網</h3>
+					<span class="font-cyan500 font-weight500">E.SUN Securities</span>
+					<div class="projectTitle">
+						<h3 class="h3 font-large font-weight700 mt-1">玉山證券 大小網</h3>
+						<a href="https://www.esunsec.com.tw/" target="_blank" class="link--linkOut">前往官網</a>
+					</div>
 					<p class="font-medium font-weight300 mt-1">
 						在專案角色為前端切版，將設計師提供的設計轉化為可操作的HTML和CSS代碼，同時注重網站的可用性和使用者體驗，以便讓使用者可以輕鬆地使用和瀏覽網站...<a
 							href="works3.html" class="link--works font-weight500">更多內容</a>
@@ -117,7 +115,7 @@
 				<li class="listWorks-item">
 					<h3 class="h3 font-large font-weight700 mt-1">UDN Shopping IPad版</h3>
 					<p class="font-medium font-weight300 mt-1">
-						客戶breif要為年長者製作符合使用體驗需求的Ipad版本(隨著RWD技術的演進，雖然此版本已不在現在)，製作過程中因專案時程必須快速開發，整個團隊採用paper
+						客戶breif要為年長者製作符合使用體驗需求的Ipad版本(隨著RWD技術的演進，雖然此版本已不在線上)，製作過程中因專案時程必須快速開發，整個團隊採用paper
 						prototype讓規劃、設計以及前端快速有共識並隨時Update與調整，是很有趣的過程，在品牌視覺設計上雖然只有製作Ipad版本，客戶很滿意進而後續客戶內部設計團隊沿用修改當時Web版...<a
 							href="works4.html" class="link--works font-weight500">更多內容</a>
 					</p>
