--- a/index-en.html
+++ b/index-en.html
@@ -34,7 +34,7 @@
 				<div class="avatarImg fontRobo"></div>
 			</div>
 			<div class="infoContent pb-8">
-				<h2 class="h2 h2--dots font-xLarge font-weight400 mt-2">Work experience</h2>
+				<h2 class="h2 h2--dots font-xLarge font-weight400 mt-2">Experience</h2>
 				<div class="description mt-6 mb-8">
 					<p class="font-medium font-weight700">Isobar</p>
 					<p class="font-medium mt-1">I have been working at Isobar for 14 years. Isobar is an agency under
